Autenticação integrada como Portal Educação livre, realizada por OAuth 2.0.
O projeto apenas com a comunicação com o servidor Oauth do portal, sem nada do dspace, pode ser encontrado neste repositório: https://bitbucket.org/ibictel/oauth

Deve ser feita a configuração correta no arquivo authentication-oauth.cfg antes da instalação. (./dspace/config/modules/authentication-oauth.cfg)

--- a/dspace-api/src/main/resources/Messages.properties
+++ b/dspace-api/src/main/resources/Messages.properties
@@ -1624,6 +1624,7 @@ org.dspace.eperson.LDAPAuthentication.title                                     
 org.dspace.eperson.PasswordAuthentication.title                                 = Enter DSpace Username and Password
 org.dspace.eperson.X509Authentication.title                                     = Enter DSpace using Web Certificate
 org.dspace.authenticate.ShibAuthentication.title                                = Login via Shibboleth
+org.dspace.eperson.OauthAuthentication.title                                    = Enter DSpace using "Portal da Educa\u00e7\u00e3o" credentials.
 org.dspace.eperson.Subscribe.authors                                            = Authors:
 org.dspace.eperson.Subscribe.id                                                 = ID:
 org.dspace.eperson.Subscribe.new-items                                          = New Items:
