--- a/dspace-api/src/main/resources/Messages.properties
+++ b/dspace-api/src/main/resources/Messages.properties
@@ -878,6 +878,8 @@ jsp.search.facet.refine.dateIssued								= Date issued
 jsp.search.facet.refine.previous								= < previous
 jsp.search.facet.refine.next									= next >
 jsp.search.facet.narrow											= Filter by {0}
+jsp.search.facet.refine.profileClass = Profile
+jsp.search.facet.refine.resourceType = Resource type
 jsp.search.filter.heading										= Add filters:
 jsp.search.filter.hint											= Use filters to refine the search results.
 jsp.search.filter.add											= Add
@@ -887,6 +889,8 @@ jsp.search.filter.title											= Title
 jsp.search.filter.author										= Author
 jsp.search.filter.subject										= Subject
 jsp.search.filter.dateIssued									= Date Issued
+jsp.search.filter.profileClass = Profile
+jsp.search.filter.resourceType = Resource type
 jsp.search.filter.op.equals 									= Equals
 jsp.search.filter.op.notequals 									= Not Equals
 jsp.search.filter.op.contains									= Contains
